:card_file_box: Introduce H2 database